--- a/contribuer.html
+++ b/contribuer.html
@@ -41,9 +41,8 @@
 
     .timeline-layout {
       display: flex;
+      width: 100%;
       height: 100vh;
-      max-width: 95vw;
-      margin: 0 auto;
       overflow: hidden;
     }
 
@@ -54,12 +53,12 @@
     }
 
     .years-column {
-      width: 100px;
+      flex: 0 0 120px; /* ✅ largeur fixe */
+      max-height: 25rem;
+      overflow-y: auto;width: 100px;
       padding-left: 2rem;
       background: white;
       border-right: 1px solid #ddd;
-      overflow-y: auto;
-      max-height: 30rem; /* 12 années visibles */
       position: relative;
       scroll-behavior: smooth;
       overscroll-behavior: contain; /* ✅ empêche le scroll page */
@@ -129,8 +128,10 @@
     }
 
     .events-column {
-      flex: 3;
-      background: var(--light);
+      flex: 1 1 600px; /* ✅ largeur "flexible mais équilibrée" */
+  min-width: 300px;
+  max-width: 700px;
+     background: var(--light);
       overflow-y: auto;
       padding: 1.5rem;
     }
@@ -157,7 +158,7 @@
     }
 
     .fiche-column {
-      flex: 2;
+      flex: 0 0 400px;;
       background: #fff;
       padding: 1.5rem;
       border-left: 1px solid #ddd;
