--- a/contribuer.html
+++ b/contribuer.html
@@ -54,13 +54,15 @@
 
     .years-column {
   flex: 0 0 90px;     /* ✅ largeur fixe propre */
-  width: 70px;
+  width: 90px;
   max-height: 25rem;  /* pour 10 dates */
   overflow-y: auto;
   background: white;
   border-right: 1px solid #ddd;
   position: relative;
   scroll-behavior: smooth;
+  overflow-y: auto;     /* ✅ scroll vertical */
+  overflow-x: hidden;   /* ✅ évite scroll horizontal */
   overscroll-behavior: contain;
   padding: 0;         /* ❌ enlève le padding qui élargit */
 }
