--- a/contribuer.html
+++ b/contribuer.html
@@ -78,16 +78,14 @@
     }
 
     .year-btn {
-      padding: 0.75rem 1rem;
-      font-size: 1rem;
-      height: 2.5rem;
-      box-sizing: border-box;
-      position: relative;
-      background: none;
-      border: none;
-      text-align: left;
-      cursor: pointer;
-    }
+  font-size: 1rem;
+  width: 100%;
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding: 0.25rem 0;
+}
 
     .year-btn:hover {
       background-color: #f0f0f0;
@@ -124,6 +122,8 @@
       font-size: 1.2rem;
       padding: 0.5rem;
       transition: background 0.2s;
+      width: 100%;     /* ✅ s'adapte à .years-column */
+  box-sizing: border-box;
     }
 
     #scroll-up:hover, #scroll-down:hover {
