--- a/contribuer.html
+++ b/contribuer.html
@@ -34,11 +34,6 @@
       padding: 1.5rem 2rem;
     }
 
-    h1, h2, h4 {
-      color: var(--primary);
-      font-weight: bold;
-    }
-
     .timeline-layout {
       display: flex;
       width: 100%;
@@ -49,58 +44,49 @@
     .years-container {
       display: flex;
       flex-direction: column;
-      align-items: stretch;
+      align-items: center;
+    }
+
+    #scroll-up,
+    #scroll-down {
+      width: 80px;
+      height: 2.5rem;
+      font-size: 1.2rem;
+      border: 1px solid var(--gray);
+      background: white;
+      cursor: pointer;
+    }
+
+    #scroll-up:hover,
+    #scroll-down:hover {
+      background: #eee;
     }
 
     .years-column {
-  flex: 0 0 90px;     /* ✅ largeur fixe propre */
-  width: 90px;
-  max-height: 25rem;  /* pour 10 dates */
-  overflow-y: auto;
-  background: white;
-  border-right: 1px solid #ddd;
-  position: relative;
-  scroll-behavior: smooth;
-  overflow-y: auto;     /* ✅ scroll vertical */
-  overflow-x: hidden;   /* ✅ évite scroll horizontal */
-  overscroll-behavior: contain;
-  padding: 0;         /* ❌ enlève le padding qui élargit */
-}
-
-    .years-column::before {
-      content: "";
-      position: absolute;
-      left: 1rem;
-      top: 0;
-      bottom: 0;
-      width: 2px;
-      background: var(--gray);
+      width: 80px;
+      height: calc(2.5rem * 10); /* 10 dates visibles */
+      overflow-y: auto;
+      background: white;
+      border-right: 1px solid #ddd;
+      position: relative;
+      scroll-behavior: smooth;
+      overscroll-behavior: contain;
     }
 
     .year-btn {
-  font-size: 1rem;
-  width: 100%;
-  text-align: center;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  padding: 0.25rem 0;
-}
+      width: 100%;
+      height: 2.5rem;
+      font-size: 1rem;
+      padding: 0;
+      background: none;
+      border: none;
+      text-align: center;
+      cursor: pointer;
+      position: relative;
+    }
 
     .year-btn:hover {
       background-color: #f0f0f0;
-    }
-
-    .year-btn::before {
-      content: "";
-      position: absolute;
-      left: -1rem;
-      top: 50%;
-      transform: translateY(-50%);
-      width: 10px;
-      height: 10px;
-      border-radius: 50%;
-      background: var(--gray);
     }
 
     .year-btn.active {
@@ -109,32 +95,30 @@
       color: var(--primary);
     }
 
+    .year-btn::before,
+    .year-btn.active::before {
+      content: "";
+      position: absolute;
+      left: 5px;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 8px;
+      height: 8px;
+      border-radius: 50%;
+      background: var(--gray);
+    }
+
     .year-btn.active::before {
       background: var(--primary);
-      width: 12px;
-      height: 12px;
-    }
-
-    #scroll-up, #scroll-down {
-      background: white;
-      border: 1px solid var(--gray);
-      cursor: pointer;
-      font-size: 1.2rem;
-      padding: 0.5rem;
-      transition: background 0.2s;
-      width: 100%;     /* ✅ s'adapte à .years-column */
-  box-sizing: border-box;
-    }
-
-    #scroll-up:hover, #scroll-down:hover {
-      background: #eee;
+      width: 10px;
+      height: 10px;
     }
 
     .events-column {
-      flex: 1 1 600px; /* ✅ largeur "flexible mais équilibrée" */
-  min-width: 300px;
-  max-width: 700px;
-     background: var(--light);
+      flex: 1 1 600px;
+      min-width: 300px;
+      max-width: 700px;
+      background: var(--light);
       overflow-y: auto;
       padding: 1.5rem;
     }
@@ -202,9 +186,9 @@
   <main>
     <div class="timeline-layout">
       <div class="years-container">
-        <button id="scroll-up" type="button"aria-label="Année précédente" title="Année précédente">↑</button>
+        <button id="scroll-up" type="button">↑</button>
         <div class="years-column" id="years-column"></div>
-        <button id="scroll-down" type="button" aria-label="Année suivante" title="Année suivante">↓</button>
+        <button id="scroll-down" type="button">↓</button>
       </div>
       <div class="events-column">
         <div id="loader" style="text-align:center; margin-top:3rem; font-style:italic;">Chargement...</div>
@@ -330,4 +314,3 @@
   </script>
 </body>
 </html>
-
