--- a/contribuer.html
+++ b/contribuer.html
@@ -96,13 +96,12 @@
     }
 
        .events-column {
-      flex: 1 1 600px;
-      min-width: 300px;
-      max-width: 700px;
-      background: var(--light);
-      overflow-y: auto;
-      padding: 1.5rem;
-    }
+  width: 600px;         /* ✅ largeur fixe */
+  flex: 0 0 600px;      /* ✅ empêche le redimensionnement */
+  background: var(--light);
+  overflow-y: auto;
+  padding: 1.5rem;
+}
 
     .event {
       background: white;
