--- a/contribuer.html
+++ b/contribuer.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -16,7 +17,6 @@
       --gray: #ccc;
       --gray-dark: #555;
     }
-
     body {
       margin: 0;
       font-family: 'League Spartan', sans-serif;
@@ -26,29 +26,24 @@
       flex-direction: column;
       min-height: 100vh;
     }
-
     main {
       flex-grow: 1;
       max-width: 1200px;
       margin: 0 auto;
       padding: 1.5rem 2rem;
     }
-
     .timeline-layout {
       display: flex;
       width: 100%;
       height: 100vh;
       overflow: hidden;
     }
-
     .years-container {
       display: flex;
       flex-direction: column;
       align-items: center;
     }
-
-    #scroll-up,
-    #scroll-down {
+    #scroll-up, #scroll-down {
       width: 80px;
       height: 2.5rem;
       font-size: 1.2rem;
@@ -56,23 +51,19 @@
       background: white;
       cursor: pointer;
     }
-
-    #scroll-up:hover,
-    #scroll-down:hover {
+    #scroll-up:hover, #scroll-down:hover {
       background: #eee;
     }
-
     .years-column {
       width: 80px;
-      height: calc(2.5rem * 10); /* 10 dates visibles */
-      overflow-y: auto;
+      height: calc(2.5rem * 10);
+      overflow-y: scroll;
       background: white;
       border-right: 1px solid #ddd;
       position: relative;
       scroll-behavior: smooth;
       overscroll-behavior: contain;
     }
-
     .year-btn {
       width: 100%;
       height: 2.5rem;
@@ -84,25 +75,21 @@
       cursor: pointer;
       position: relative;
     }
-
     .year-btn:hover {
       background-color: #f0f0f0;
     }
-
     .year-btn.active {
       font-weight: bold;
       font-size: 1.2rem;
       color: var(--primary);
     }
-
-       .events-column {
-  width: 600px;         /* ✅ largeur fixe */
-  flex: 0 0 600px;      /* ✅ empêche le redimensionnement */
-  background: var(--light);
-  overflow-y: auto;
-  padding: 1.5rem;
-}
-
+    .events-column {
+      width: 600px;
+      flex: 0 0 600px;
+      background: var(--light);
+      overflow-y: auto;
+      padding: 1.5rem;
+    }
     .event {
       background: white;
       border-radius: 6px;
@@ -112,18 +99,15 @@
       gap: 1rem;
       border-left: 4px solid var(--gray);
     }
-
     .event.nearby {
       opacity: 0.5;
       font-style: italic;
     }
-
     .event-date {
       font-weight: bold;
       color: var(--gray-dark);
       min-width: 70px;
     }
-
     .fiche-column {
       flex: 0 0 400px;
       background: #fff;
@@ -131,11 +115,9 @@
       border-left: 1px solid #ddd;
       overflow-y: auto;
     }
-
     .fiche-column h3 {
       margin-top: 0;
     }
-
     .pluriannuel-badge {
       display: inline-block;
       background-color: var(--primary);
@@ -183,7 +165,6 @@
       </div>
     </div>
   </main>
-
   <script>
     document.addEventListener("DOMContentLoaded", () => {
       const yearCol = document.getElementById("years-column");
@@ -212,60 +193,49 @@
 
           const yearButtons = Array.from(document.querySelectorAll(".year-btn"));
 
+          function renderEvents(year) {
+            const isInRange = e => Array.from({ length: e.end - e.start + 1 }, (_, i) => e.start + i).includes(year);
+            const isExact = e => e.start <= year && e.end >= year;
+
+            const events = data.filter(isInRange);
+            eventList.innerHTML = "";
+
+            events.sort((a, b) => a.start - b.start).forEach(e => {
+              const ev = document.createElement("div");
+              const exact = isExact(e);
+
+              ev.className = "event" + (exact ? "" : " nearby");
+              ev.innerHTML = \`
+                <div class="event-date"\${exact ? ' style="display:none;"' : ''}>${year}</div>
+                <div>
+                  <strong>${e.title}${e.start !== e.end ? ` <em>(${e.start}–${e.end})</em>` : ""}</strong>
+                  ${e.start !== e.end ? `<span class="pluriannuel-badge">Pluriannuel</span>` : ""}
+                  <div class="range-info"\${exact ? '' : ' style="display:none;"'}>${e.start} – ${e.end}</div>
+                </div>
+              \`;
+              ev.onclick = () => {
+                ficheTitre.textContent = \`\${e.title} (\${e.start} – \${e.end})\`;
+                ficheContent.innerHTML = \`
+                  <p><strong>Catégories :</strong> \${e.maincat || ""} / \${e.subcat || ""}</p>
+                  <p><strong>Thèmes :</strong> \${e.themes || ""}</p>
+                  <p><strong>Mots-clés :</strong> \${e.keywords || ""}</p>
+                  <p>\${e.description || ""}</p>
+                  \${e.source ? \`<p><a href="\${e.source}" target="_blank">Source</a></p>\` : ""}
+                \`;
+              };
+              eventList.appendChild(ev);
+            });
+
+            messageAttente.style.display = events.length ? "none" : "block";
+          }
+
           yearButtons.forEach(btn => {
             btn.addEventListener("click", () => {
               yearButtons.forEach(b => b.classList.remove("active"));
               btn.classList.add("active");
 
               const year = parseInt(btn.dataset.year);
-              eventList.innerHTML = "";
-
-              const prev = [], current = [], next = [];
-
-              data.forEach(e => {
-                if (e.start <= year && e.end >= year) current.push(e);
-                else if (e.end >= year - 2 && e.end < year) prev.push(e);
-                else if (e.start > year && e.start <= year + 2) next.push(e);
-              });
-
-              const createBlock = (title, events, isNearby = false) => {
-                if (!events.length) return;
-                const section = document.createElement("div");
-                const h4 = document.createElement("h4");
-                h4.textContent = title;
-                section.appendChild(h4);
-
-                events.sort((a, b) => a.start - b.start).forEach(e => {
-                  const ev = document.createElement("div");
-                  ev.className = "event" + (isNearby ? " nearby" : "");
-                  ev.innerHTML = `
-                    <div class="event-date">${e.start}</div>
-                    <div>
-                      <strong>${e.title}${e.start !== e.end ? ` <em>(${e.start}–${e.end})</em>` : ""}</strong>
-                      ${e.start !== e.end ? `<span class="pluriannuel-badge">Pluriannuel</span>` : ""}
-                    </div>
-                  `;
-                  ev.onclick = () => {
-                    ficheTitre.textContent = `${e.title} (${e.start} – ${e.end})`;
-                    ficheContent.innerHTML = `
-                      <p><strong>Catégories :</strong> ${e.maincat || ""} / ${e.subcat || ""}</p>
-                      <p><strong>Thèmes :</strong> ${e.themes || ""}</p>
-                      <p><strong>Mots-clés :</strong> ${e.keywords || ""}</p>
-                      <p>${e.description || ""}</p>
-                      ${e.source ? `<p><a href="${e.source}" target="_blank">Source</a></p>` : ""}
-                    `;
-                  };
-                  section.appendChild(ev);
-                });
-
-                eventList.appendChild(section);
-              };
-
-              createBlock("Événements voisins précédents", prev, true);
-              createBlock(`Événements de ${year}`, current);
-              createBlock("Événements voisins suivants", next, true);
-
-              messageAttente.style.display = (prev.length || current.length || next.length) ? "none" : "block";
+              renderEvents(year);
             });
           });
 
@@ -294,3 +264,4 @@
   </script>
 </body>
 </html>
+
