--- a/contribuer.html
+++ b/contribuer.html
@@ -205,14 +205,14 @@
               const exact = isExact(e);
 
               ev.className = "event" + (exact ? "" : " nearby");
-              ev.innerHTML = \`
-                <div class="event-date"\${exact ? ' style="display:none;"' : ''}>${year}</div>
-                <div>
-                  <strong>${e.title}${e.start !== e.end ? ` <em>(${e.start}–${e.end})</em>` : ""}</strong>
-                  ${e.start !== e.end ? `<span class="pluriannuel-badge">Pluriannuel</span>` : ""}
-                  <div class="range-info"\${exact ? '' : ' style="display:none;"'}>${e.start} – ${e.end}</div>
-                </div>
-              \`;
+             ev.innerHTML = `
+  <div class="event-date"${exact ? ' style="display:none;"' : ''}>${year}</div>
+  <div>
+    <strong>${e.title}${e.start !== e.end ? ` <em>(${e.start}–${e.end})</em>` : ""}</strong>
+    ${e.start !== e.end ? `<span class="pluriannuel-badge">Pluriannuel</span>` : ""}
+    <div class="range-info"${exact ? '' : ' style="display:none;"'}>${e.start} – ${e.end}</div>
+  </div>
+`;
               ev.onclick = () => {
                 ficheTitre.textContent = \`\${e.title} (\${e.start} – \${e.end})\`;
                 ficheContent.innerHTML = \`
