--- a/contribuer.html
+++ b/contribuer.html
@@ -195,7 +195,10 @@
           const yearButtons = Array.from(document.querySelectorAll(".year-btn"));
 
           function renderEvents(year) {
-            const isInRange = e => Array.from({ length: e.end - e.start + 1 }, (_, i) => e.start + i).includes(year);
+            const isInRange = e =>
+              (e.start <= year && e.end >= year) || // Normal in-range
+              (e.start === e.end && Math.abs(e.start - year) <= 2); // Nearby punctual events
+
             const isExact = e => e.start <= year && e.end >= year;
 
             const events = data.filter(isInRange);
@@ -209,13 +212,13 @@
              ev.innerHTML = `
   <div class="event-date"${exact ? ' style="display:none;"' : ''}>${year}</div>
   <div>
-    <strong>${e.title}${e.start !== e.end ? ` <em>(${e.start}–${e.end})</em>` : ""}</strong>
+    <strong>${e.title}${e.start !== e.end ? ` <em>(${e.start}-${e.end})</em>` : ""}</strong>
     ${e.start !== e.end ? `<span class="pluriannuel-badge">Pluriannuel</span>` : ""}
-    <div class="range-info"${exact ? '' : ' style="display:none;"'}>${e.start} – ${e.end}</div>
+    <div class="range-info"${exact ? '' : ' style="display:none;"'}>${e.start} - ${e.end}</div>
   </div>
 `;
               ev.onclick = () => {
-                ficheTitre.textContent = `${e.title} (${e.start} – ${e.end})`;
+                ficheTitre.textContent = `${e.title} (${e.start} - ${e.end})`;
                 ficheContent.innerHTML = `
                   <p><strong>Catégories :</strong> ${e.maincat || ""} / ${e.subcat || ""}</p>
                   <p><strong>Thèmes :</strong> ${e.themes || ""}</p>
@@ -265,5 +268,4 @@
   </script>
 </body>
 </html>
-
 
