--- a/contribuer.html
+++ b/contribuer.html
@@ -195,30 +195,29 @@
           const yearButtons = Array.from(document.querySelectorAll(".year-btn"));
 
           function renderEvents(year) {
-            const isInRange = e =>
-              (e.start <= year && e.end >= year) || // Normal in-range
-              (e.start === e.end && Math.abs(e.start - year) <= 2); // Nearby punctual events
+            const events = data.filter(e => {
+              const isSpan = e.start <= year && e.end >= year;
+              const isNearbyPunctual = e.start === e.end && Math.abs(e.start - year) <= 2;
+              return isSpan || isNearbyPunctual;
+            });
 
-            const isExact = e => e.start <= year && e.end >= year;
-
-            const events = data.filter(isInRange);
             eventList.innerHTML = "";
 
             events.sort((a, b) => a.start - b.start).forEach(e => {
-              const ev = document.createElement("div");
-              const exact = isExact(e);
+              const exact = e.start <= year && e.end >= year;
 
+              const ev = document.createElement("div");
               ev.className = "event" + (exact ? "" : " nearby");
-             ev.innerHTML = `
-  <div class="event-date"${exact ? ' style="display:none;"' : ''}>${year}</div>
-  <div>
-    <strong>${e.title}${e.start !== e.end ? ` <em>(${e.start}-${e.end})</em>` : ""}</strong>
-    ${e.start !== e.end ? `<span class="pluriannuel-badge">Pluriannuel</span>` : ""}
-    <div class="range-info"${exact ? '' : ' style="display:none;"'}>${e.start} - ${e.end}</div>
-  </div>
-`;
+              ev.innerHTML = `
+                <div class="event-date">${e.start} – ${e.end}</div>
+                <div>
+                  <strong>${e.title}${e.start !== e.end ? ` <em>(${e.start}-${e.end})</em>` : ""}</strong>
+                  ${e.start !== e.end ? `<span class="pluriannuel-badge">Pluriannuel</span>` : ""}
+                </div>
+              `;
+
               ev.onclick = () => {
-                ficheTitre.textContent = `${e.title} (${e.start} - ${e.end})`;
+                ficheTitre.textContent = `${e.title} (${e.start} – ${e.end})`;
                 ficheContent.innerHTML = `
                   <p><strong>Catégories :</strong> ${e.maincat || ""} / ${e.subcat || ""}</p>
                   <p><strong>Thèmes :</strong> ${e.themes || ""}</p>
@@ -227,6 +226,12 @@
                   ${e.source ? `<p><a href="${e.source}" target="_blank">Source</a></p>` : ""}
                 `;
               };
+
+              eventList.appendChild(ev);
+            });
+
+            messageAttente.style.display = events.length ? "none" : "block";
+          };
               eventList.appendChild(ev);
             });
 
@@ -268,4 +273,5 @@
   </script>
 </body>
 </html>
+
 
