--- a/contribuer.html
+++ b/contribuer.html
@@ -65,25 +65,6 @@
       scroll-behavior: smooth;
       overscroll-behavior: contain;
     }
-    .year-btn {
-      width: 100%;
-      height: 2.5rem;
-      font-size: 1rem;
-      padding: 0;
-      background: none;
-      border: none;
-      text-align: center;
-      cursor: pointer;
-      position: relative;
-    }
-    .year-btn:hover {
-      background-color: #f0f0f0;
-    }
-    .year-btn.active {
-      font-weight: bold;
-      font-size: 1.2rem;
-      color: var(--primary);
-    }
     .events-column {
       width: 600px;
       flex: 0 0 600px;
@@ -91,42 +72,12 @@
       overflow-y: auto;
       padding: 1.5rem;
     }
-    .event {
-      background: white;
-      border-radius: 6px;
-      margin-bottom: 1rem;
-      padding: 1rem;
-      display: flex;
-      gap: 1rem;
-      border-left: 4px solid var(--gray);
-    }
-    .event.nearby {
-      opacity: 0.5;
-      font-style: italic;
-    }
-    .event-date {
-      font-weight: bold;
-      color: var(--gray-dark);
-      min-width: 70px;
-    }
     .fiche-column {
       flex: 0 0 400px;
       background: #fff;
       padding: 1.5rem;
       border-left: 1px solid #ddd;
       overflow-y: auto;
-    }
-    .fiche-column h3 {
-      margin-top: 0;
-    }
-    .pluriannuel-badge {
-      display: inline-block;
-      background-color: var(--primary);
-      color: white;
-      font-size: 0.7rem;
-      padding: 2px 6px;
-      margin-left: 6px;
-      border-radius: 4px;
     }
   </style>
 </head>
@@ -150,127 +101,27 @@
     <div class="timeline-layout">
       <div class="years-container">
         <button id="scroll-up" type="button">↑</button>
-        <div class="years-column" id="years-column"></div>
+        <div class="years-column" id="years-column">
+          <!-- Boutons d'années ici -->
+        </div>
         <button id="scroll-down" type="button">↓</button>
       </div>
       <div class="events-column">
         <div id="loader" style="text-align:center; margin-top:3rem; font-style:italic;">Chargement...</div>
-        <div id="message-attente" style="text-align:center; margin-top:3rem; font-style:italic; color:#666; display:none;">
+        <div id="message-attente" style="text-align:center; margin-top:3rem; font-style:italic; color:#666;">
           Aucun événement affiché. Sélectionnez une année dans la colonne de gauche.
         </div>
-        <div id="event-list"></div>
+        <div id="event-list">
+          <!-- Événements ici -->
+        </div>
       </div>
       <div class="fiche-column">
         <h3 id="fiche-titre">Détails</h3>
-        <div id="fiche-content">Cliquez sur un événement pour voir sa fiche complète.</div>
+        <div id="fiche-content">
+          Cliquez sur un événement pour voir sa fiche complète.
+        </div>
       </div>
     </div>
   </main>
-  <script>
-    document.addEventListener("DOMContentLoaded", () => {
-      const yearCol = document.getElementById("years-column");
-      const eventList = document.getElementById("event-list");
-      const ficheTitre = document.getElementById("fiche-titre");
-      const ficheContent = document.getElementById("fiche-content");
-      const loader = document.getElementById("loader");
-      const messageAttente = document.getElementById("message-attente");
-
-      fetch("events.json")
-        .then(res => res.json())
-        .then(data => {
-          loader.style.display = "none";
-
-          const years = [...new Set(data.flatMap(e =>
-            Array.from({ length: e.end - e.start + 1 }, (_, i) => e.start + i)
-          ))].sort((a, b) => a - b);
-
-          years.forEach(y => {
-            const btn = document.createElement("button");
-            btn.className = "year-btn";
-            btn.dataset.year = y;
-            btn.textContent = y;
-            yearCol.appendChild(btn);
-          });
-
-          const yearButtons = Array.from(document.querySelectorAll(".year-btn"));
-
-          function renderEvents(year) {
-            const events = data.filter(e => {
-              const isSpan = e.start <= year && e.end >= year;
-              const isNearbyPunctual = e.start === e.end && Math.abs(e.start - year) <= 2;
-              return isSpan || isNearbyPunctual;
-            });
-
-            eventList.innerHTML = "";
-
-            events.sort((a, b) => a.start - b.start).forEach(e => {
-              const exact = e.start <= year && e.end >= year;
-
-              const ev = document.createElement("div");
-              ev.className = "event" + (exact ? "" : " nearby");
-              ev.innerHTML = `
-                <div class="event-date">${e.start} – ${e.end}</div>
-                <div>
-                  <strong>${e.title}${e.start !== e.end ? ` <em>(${e.start}-${e.end})</em>` : ""}</strong>
-                  ${e.start !== e.end ? `<span class="pluriannuel-badge">Pluriannuel</span>` : ""}
-                </div>
-              `;
-
-              ev.onclick = () => {
-                ficheTitre.textContent = `${e.title} (${e.start} – ${e.end})`;
-                ficheContent.innerHTML = `
-                  <p><strong>Catégories :</strong> ${e.maincat || ""} / ${e.subcat || ""}</p>
-                  <p><strong>Thèmes :</strong> ${e.themes || ""}</p>
-                  <p><strong>Mots-clés :</strong> ${e.keywords || ""}</p>
-                  <p>${e.description || ""}</p>
-                  ${e.source ? `<p><a href="${e.source}" target="_blank">Source</a></p>` : ""}
-                `;
-              };
-
-              eventList.appendChild(ev);
-            });
-
-            messageAttente.style.display = events.length ? "none" : "block";
-          };
-              eventList.appendChild(ev);
-            });
-
-            messageAttente.style.display = events.length ? "none" : "block";
-          }
-
-          yearButtons.forEach(btn => {
-            btn.addEventListener("click", () => {
-              yearButtons.forEach(b => b.classList.remove("active"));
-              btn.classList.add("active");
-
-              const year = parseInt(btn.dataset.year);
-              renderEvents(year);
-            });
-          });
-
-          function selectYearByOffset(offset) {
-            const currentIndex = yearButtons.findIndex(btn => btn.classList.contains("active"));
-            const newIndex = currentIndex + offset;
-            if (newIndex >= 0 && newIndex < yearButtons.length) {
-              yearButtons[newIndex].click();
-              yearButtons[newIndex].scrollIntoView({
-                behavior: "smooth",
-                block: "center",
-                inline: "nearest"
-              });
-            }
-          }
-
-          document.getElementById("scroll-up").addEventListener("click", () => {
-            selectYearByOffset(-1);
-          });
-
-          document.getElementById("scroll-down").addEventListener("click", () => {
-            selectYearByOffset(1);
-          });
-        });
-    });
-  </script>
 </body>
 </html>
-
