--- a/contribuer.html
+++ b/contribuer.html
@@ -33,6 +33,33 @@
       margin: 0 auto;
       padding: 1.5rem 2rem;
     }
+
+    .year-btn {
+  width: 100%;
+  height: 2.5rem;
+  font-size: 1rem;
+  padding: 0;
+  background: none;
+  border: none;
+  text-align: center;
+  cursor: pointer;
+  color: var(--text);
+}
+
+.year-btn:hover {
+  background-color: #f0f0f0;
+}
+
+.year-btn.active {
+  font-weight: bold;
+  font-size: 1.2rem;
+  color: var(--primary);
+}
+    .years-column {
+  background: none;
+  border: none;
+  scrollbar-width: thin;
+}
     .timeline-layout {
       display: flex;
       width: 100%;
