--- a/contribuer.html
+++ b/contribuer.html
@@ -38,22 +38,27 @@
   width: 100%;
   height: 2.5rem;
   font-size: 1rem;
-  padding: 0;
+  padding: 0.2rem;
   background: none;
   border: none;
   text-align: center;
   cursor: pointer;
   color: var(--text);
+  margin: 2px 0;
+  transition: background 0.2s, font-size 0.2s;
 }
 
 .year-btn:hover {
   background-color: #f0f0f0;
 }
 
-.year-btn.active {
+
+  .year-btn.active {
+  color: #007b7f;
+  background-color: var(--primary);
   font-weight: bold;
-  font-size: 1.2rem;
-  color: var(--primary);
+  font-size: 1.3rem;
+  border-radius: 4px;
 }
     .years-column {
   background: none;
