--- a/contribuer.html
+++ b/contribuer.html
@@ -156,47 +156,47 @@
     </div>
   </main>
 
- <script>
-  // ⬇️ colle ici le code JS fourni
+<script>
   document.addEventListener("DOMContentLoaded", () => {
     const yearCol = document.getElementById("years-column");
 
     fetch("events.json")
       .then(res => res.json())
       .then(data => {
-
         if (!Array.isArray(data)) {
-  console.error("Format JSON invalide.");
-  return;
-}
+          console.error("Format JSON invalide.");
+          return;
+        }
+
         const allYears = data.flatMap(e =>
           Array.from({ length: e.end - e.start + 1 }, (_, i) => e.start + i)
         );
         const uniqueYears = [...new Set(allYears)].sort((a, b) => a - b);
 
         uniqueYears.forEach(year => {
-  const btn = document.createElement("button");
-  btn.className = "year-btn";
-  btn.textContent = year;
-  btn.dataset.year = year;
-  yearCol.appendChild(btn);
-});
+          const btn = document.createElement("button");
+          btn.className = "year-btn";
+          btn.textContent = year;
+          btn.dataset.year = year;
+          yearCol.appendChild(btn);
+        });
 
-// 👉 Ajoute ici après que tous les boutons soient créés
-const yearButtons = document.querySelectorAll(".year-btn");
+        const yearButtons = document.querySelectorAll(".year-btn");
 
-yearButtons.forEach(btn => {
-  btn.addEventListener("click", () => {
-    yearButtons.forEach(b => b.classList.remove("active"));
-    btn.classList.add("active");
+        yearButtons.forEach(btn => {
+          btn.addEventListener("click", () => {
+            yearButtons.forEach(b => b.classList.remove("active"));
+            btn.classList.add("active");
 
-    const selectedYear = parseInt(btn.dataset.year);
-    // 🔧 Tu pourras appeler la fonction d'affichage ici (à faire plus tard)
-    // renderEvents(selectedYear);
+            const selectedYear = parseInt(btn.dataset.year);
+            // renderEvents(selectedYear); // à faire ensuite
+          });
+        });
+      }) // 👈 FIN DU .then
+      .catch(error => {
+        console.error("Erreur de chargement JSON :", error);
+      });
   });
-});
-       
-  });
-</script> 
+</script>
 </body>
 </html>
