--- a/contribuer.html
+++ b/contribuer.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -49,7 +47,7 @@
 }
 
 .year-btn:hover {
-  background-color: #f0f0f0;
+  background-color: #d3d3d3;
 }
 
 
