--- a/contribuer.html
+++ b/contribuer.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -33,31 +35,30 @@
     }
 
     .year-btn {
-  width: 100%;
-  height: 2.5rem;
-  font-size: 1rem;
-  padding: 0.2rem;
-  background: none;
-  border: none;
-  text-align: center;
-  cursor: pointer;
-  color: var(--text);
-  margin: 2px 0;
-  transition: background 0.2s, font-size 0.2s;
-}
+      width: 100%;
+      height: 2.5rem;
+      font-size: 1rem;
+      padding: 0.2rem;
+      background: none;
+      border: none;
+      text-align: center;
+      cursor: pointer;
+      color: var(--text);
+      margin: 2px 0;
+      transition: background 0.2s, font-size 0.2s;
+    }
 
-.year-btn:hover {
-  background-color: #fee58c;
-}
+    .year-btn:hover {
+      background-color: #fee58c;
+    }
 
+    .year-btn.active {
+      color: #007b7f;
+      font-weight: bold;
+      font-size: 1.3rem;
+      border-radius: 4px;
+    }
 
-  .year-btn.active {
-  color: #007b7f;
-  font-weight: bold;
-  font-size: 1.3rem;
-  border-radius: 4px;
-}
-  
     .timeline-layout {
       display: flex;
       width: 100%;
@@ -80,21 +81,19 @@
     #scroll-up:hover, #scroll-down:hover {
       background: #eee;
     }
-    
 
-.years-column {
-  width: 80px;
-  height: calc(2.5rem * 10);
-  overflow-y: scroll;
-  background: white;
-  border-right: 1px solid #ddd;
-  position: relative;
-  scroll-behavior: smooth;
-  overscroll-behavior: contain;
-  scrollbar-width: thin;
-}
+    .years-column {
+      width: 80px;
+      height: calc(2.5rem * 10);
+      overflow-y: scroll;
+      background: white;
+      border-right: 1px solid #ddd;
+      position: relative;
+      scroll-behavior: smooth;
+      overscroll-behavior: contain;
+      scrollbar-width: thin;
+    }
 
-    
     .events-column {
       width: 600px;
       flex: 0 0 600px;
@@ -131,9 +130,7 @@
     <div class="timeline-layout">
       <div class="years-container">
         <button id="scroll-up" type="button">↑</button>
-        <div class="years-column" id="years-column">
-          <!-- Boutons d'années ici -->
-        </div>
+        <div class="years-column" id="years-column"></div>
         <button id="scroll-down" type="button">↓</button>
       </div>
       <div class="events-column">
@@ -141,19 +138,14 @@
         <div id="message-attente" style="text-align:center; margin-top:3rem; font-style:italic; color:#666;">
           Aucun événement affiché. Sélectionnez une année dans la colonne de gauche.
         </div>
-        <div id="event-list">
-          <!-- Événements ici -->
-        </div>
+        <div id="event-list"></div>
       </div>
       <div class="fiche-column">
         <h3 id="fiche-titre">Détails</h3>
-        <div id="fiche-content">
-          Cliquez sur un événement pour voir sa fiche complète.
-        </div>
+        <div id="fiche-content">Cliquez sur un événement pour voir sa fiche complète.</div>
       </div>
     </div>
   </main>
-
 <script>
   document.addEventListener("DOMContentLoaded", () => {
     const yearCol = document.getElementById("years-column");
@@ -189,6 +181,27 @@
             const selectedYear = parseInt(btn.dataset.year);
             // renderEvents(selectedYear);
           });
+        });
+
+        function selectYearByOffset(offset) {
+          const currentIndex = [...yearButtons].findIndex(btn => btn.classList.contains("active"));
+          const newIndex = currentIndex + offset;
+
+          if (newIndex >= 0 && newIndex < yearButtons.length) {
+            yearButtons[newIndex].click();
+            yearButtons[newIndex].scrollIntoView({
+              behavior: "smooth",
+              block: "center",
+            });
+          }
+        }
+
+        document.getElementById("scroll-up").addEventListener("click", () => {
+          selectYearByOffset(-1);
+        });
+
+        document.getElementById("scroll-down").addEventListener("click", () => {
+          selectYearByOffset(1);
         });
       })
       .catch(err => {
