--- a/contribuer.html
+++ b/contribuer.html
@@ -217,7 +217,7 @@ fetch("events.json?" + Date.now())
       document.getElementById("scroll-down").addEventListener("click", () => selectYearByOffset(1));
     });
 
-  function renderEvents(year) {
+ function renderEvents(year) {
   console.log("Affichage des événements pour l'année :", year);
   const top = document.getElementById("bloc-superieur");
   const center = document.getElementById("bloc-central");
@@ -228,9 +228,11 @@ fetch("events.json?" + Date.now())
     const div = document.createElement("div");
     div.className = "event" + (isContext ? " nearby" : "");
     div.innerHTML = `
-      <div class="event-date">${y}</div>
-      <div><strong>${e.title}${e.start !== e.end ? ` <em>(${e.start}–${e.end})</em>` : ""}</strong>
-      ${e.start !== e.end ? '<span class="pluriannuel-badge">Pluriannuel</span>' : ""}</div>
+      ${isContext ? `<div class="event-date">${y}</div>` : ""}
+      <div>
+        <strong>${e.title}${e.start !== e.end ? ` <em>(${e.start}–${e.end})</em>` : ""}</strong>
+        ${e.start !== e.end ? '<span class="pluriannuel-badge">Pluriannuel</span>' : ""}
+      </div>
     `;
     return div;
   };
@@ -238,9 +240,11 @@ fetch("events.json?" + Date.now())
   eventData.forEach(e => {
     if (e.start <= year && e.end >= year)
       center.appendChild(makeEvent(e, year, false));
+
     for (let y = year - 2; y < year; y++)
       if ((e.start === e.end && e.start === y) || (e.start <= y && e.end >= y))
         top.appendChild(makeEvent(e, y, true));
+
     for (let y = year + 1; y <= year + 2; y++)
       if ((e.start === e.end && e.start === y) || (e.start <= y && e.end >= y))
         bottom.appendChild(makeEvent(e, y, true));
